feat: Colour Change

--- a/splash.html
+++ b/splash.html
@@ -25,7 +25,7 @@
     .splash-container {
       width: 100%;
       height: 100%;
-      background: linear-gradient(135deg, #722f37 0%, #5a2429 100%);
+      background: linear-gradient(135deg, #B5316A 0%, #8F2654 100%);
       border-radius: 16px;
       box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
       display: flex;
