fix: UI updates

--- a/splash.html
+++ b/splash.html
@@ -37,77 +37,69 @@
       overflow: hidden;
     }
 
-    .splash-container::before {
-      content: '';
-      position: absolute;
-      top: -50%;
-      left: -50%;
-      width: 200%;
-      height: 200%;
-      background: radial-gradient(circle, rgba(255,255,255,0.1) 0%, transparent 70%);
-      animation: rotate 20s linear infinite;
-    }
-
-    @keyframes rotate {
-      from { transform: rotate(0deg); }
-      to { transform: rotate(360deg); }
+    .logos-container {
+      display: flex;
+      gap: 40px;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 40px;
     }
 
     .logo-container {
       width: 100px;
       height: 100px;
-      background: white;
-      border-radius: 20px;
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-bottom: 20px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-      position: relative;
-      z-index: 1;
+    }
+
+    .logo-container:last-child {
+      width: 120px;
+      height: 120px;
     }
 
     .logo-container img {
-      width: 70px;
-      height: 70px;
+      width: 100%;
+      height: 100%;
       object-fit: contain;
     }
 
-    .app-name {
-      font-size: 28px;
+    .app-title {
+      font-size: 24px;
       font-weight: 700;
       color: white;
       margin-bottom: 8px;
       text-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-      position: relative;
-      z-index: 1;
     }
 
-    .app-tagline {
-      font-size: 14px;
-      color: rgba(255, 255, 255, 0.9);
-      margin-bottom: 30px;
-      position: relative;
-      z-index: 1;
+    .app-version {
+      position: absolute;
+      bottom: 20px;
+      left: 20px;
+      font-size: 10px;
+      font-weight: 500;
+      color: rgba(255, 255, 255, 0.8);
+      text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
     }
 
     .loader {
-      width: 200px;
-      height: 4px;
-      background: rgba(255, 255, 255, 0.2);
-      border-radius: 2px;
+      width: 250px;
+      height: 8px;
+      background: rgba(255, 255, 255, 0.3);
+      border-radius: 4px;
       overflow: hidden;
       position: relative;
-      z-index: 1;
+      box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
     }
 
     .loader-bar {
-      width: 40%;
+      width: 50%;
       height: 100%;
       background: white;
-      border-radius: 2px;
-      animation: loading 1.5s ease-in-out infinite;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+      border-radius: 4px;
+      animation: loading 1.2s ease-in-out infinite;
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.8);
+      will-change: transform;
     }
 
     @keyframes loading {
@@ -115,30 +107,34 @@
         transform: translateX(-100%);
       }
       100% {
-        transform: translateX(350%);
+        transform: translateX(300%);
       }
-    }
-
-    .loading-text {
-      margin-top: 15px;
-      font-size: 12px;
-      color: rgba(255, 255, 255, 0.8);
-      position: relative;
-      z-index: 1;
     }
   </style>
 </head>
 <body>
   <div class="splash-container">
-    <div class="logo-container">
-      <img src="icon.png" alt="Logo">
+    <div class="logos-container">
+      <div class="logo-container">
+        <img src="frontend/src/assets/Church_of_South_India.png" alt="CSI Logo">
+      </div>
+      <div class="logo-container">
+        <img src="frontend/src/assets/CSI_Tirunelveli_Diocese_Logo.png" alt="Tirunelveli Diocese Logo">
+      </div>
     </div>
-    <div class="app-name">Ecclesia</div>
-    <div class="app-tagline">Church Management System</div>
+    <div class="app-title">Ecclesia - Desktop</div>
     <div class="loader">
       <div class="loader-bar"></div>
     </div>
-    <div class="loading-text">Loading...</div>
+    <div class="app-version" id="version">v1.0.0</div>
   </div>
+  <script>
+    // Get version from Electron
+    if (window.electron?.app?.getVersion) {
+      window.electron.app.getVersion().then(v => {
+        document.getElementById('version').textContent = 'v' + v;
+      });
+    }
+  </script>
 </body>
 </html>
