chore: bump version to 1.0.7

--- a/splash.html
+++ b/splash.html
@@ -116,10 +116,10 @@
   <div class="splash-container">
     <div class="logos-container">
       <div class="logo-container">
-        <img src="frontend/src/assets/Church_of_South_India.png" alt="CSI Logo">
+        <img src="./backend/assets/images/Church_of_South_India.png" alt="CSI Logo">
       </div>
       <div class="logo-container">
-        <img src="frontend/src/assets/CSI_Tirunelveli_Diocese_Logo.png" alt="Tirunelveli Diocese Logo">
+        <img src="./backend/assets/images/CSI_Tirunelveli_Diocese_Logo.png" alt="Tirunelveli Diocese Logo">
       </div>
     </div>
     <div class="app-title">Ecclesia - Desktop</div>
@@ -141,3 +141,5 @@
   </script>
 </body>
 </html>
+
+
